Attempt to fix touch capabilities on iPhone

--- a/scss/blogSass_ForCards.scss
+++ b/scss/blogSass_ForCards.scss
@@ -153,7 +153,7 @@ body {
 .flip-container,
 .flip-container .front-side,
 .flip-container .back-side {
-    min-width: 300px;
+    width: 300px;
     min-height: 300px;
 }
 
@@ -200,7 +200,20 @@ body {
     -webkit-transform: rotateY(-180deg);
 }
 
+.flip-container:focus .front-side {
+    transform: rotateY(-180deg);
+    -webkit-transform: rotateY(-180deg);
+}
+
 .flip-container:hover .back-side {
+    transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+/*    -ms-transform: scale(2,2); /* IE 9 */
+    /*-webkit-transform: scale(2,2); /* Safari */
+    /*transform: scale(2,2);*/
+}
+
+.flip-container:focus .back-side {
     transform: rotateY(0deg);
     -webkit-transform: rotateY(0deg);
 /*    -ms-transform: scale(2,2); /* IE 9 */
